# meralco-rates-cli

./: .gitignore  LICENSE  README.md  meralco_latest.csv  pyproject.toml
.github/workflows/: ci.yml
meralco_rates/: cli.py  scraper.py
tests/: test_scraper.py
