[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meralco-rates-cli"
version = "0.1.0"
description = "A generic CLI tool to fetch and parse Meralco Residential Schedule of Rates PDFs."
readme = "README.md"
authors = [
    { name = "Blueshift OS Contributor" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9"
dependencies = [
    "pdfplumber>=0.10.0",
    "certifi>=2024.0.0"
]

[project.scripts]
meralco-rates = "meralco_rates.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0"
]
